--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-icons": "^4.12.0",
     "react-spinners": "^0.13.8",
     "resend": "^2.1.0",
+    "server-only": "^0.0.1",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
